@@ -1,5 +1,6 @@
 plugins {
     kotlin("jvm")
+    id("com.palantir.git-version")
 }
 
 group = "dev.kokoroidkt"
@@ -25,4 +26,22 @@ kotlin {
 
 tasks.test {
     useJUnitPlatform()
+}
+
+val gitVersion: groovy.lang.Closure<String> by extra
+val gitCommit = gitVersion().substring(0, 7)
+
+tasks.jar {
+    manifest {
+        attributes(
+            "Implementation-Title" to "Kokoroid Transport API",
+            "Implementation-Version" to project.version,
+            "Implementation-Vendor" to "dev.kokoroidkt",
+            "Git-Hash" to gitCommit,
+            "Add-Opens" to "java.base/java.lang java.base/jdk.internal.loader",
+            "Add-Exports" to "java.base/jdk.internal.loader",
+            "Enable-Native-Access" to "ALL-UNNAMED",
+        )
+    }
+    archiveFileName.set("kokoroid-transport-api-$version-$gitCommit.jar")
 }
